--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "antd": "^4.17.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.6",
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
+    "redux": "^4.1.2",
     "sass": "^1.44.0",
     "web-vitals": "^1.0.1"
   },
